2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* console-x.c (x_perhaps_init_unseen_key_defaults): Use
	build_intstring to avoid type error.
	* event-Xt.c (x_keysym_to_emacs_keysym): Add cast to avoid type
	error.

2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* .cvsignore: Add dump-size, xemacs.def, xemacs.def.in.

2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* gpmevent.c: Remove workaround.
	* gpmevent.c (Fgpm_enable): Use GET_DEFUN_LISP_OBJECT to get
	Lisp_Object of a built-in function.
	* gpmevent.c (syms_of_gpmevent): Remove workaround.
	* lisp.h (GET_DEFUN_LISP_OBJECT): New. Returns Lisp_Object of a
	DEFUN.
	* tooltalk.c (init_tooltalk): Use GET_DEFUN_LISP_OBJECT to get
	Lisp_Object of a built-in function.

2005-06-26  Aidan Kehoe  <kehoea@parhasard.net>

	* event-stream.c (command_builder_find_leaf):
	* mule-ccl.c (POSSIBLE_LEADING_BYTE_P):
	* mule-ccl.c (ccl_driver):
	Couple of build fixes. 
	
2005-06-26  Aidan Kehoe  <kehoea@parhasard.net>

	* mule-ccl.c (POSSIBLE_LEADING_BYTE_P): Add.
	* mule-ccl.c: Check that a character set exists before using it
	to create a character. 
	
2005-06-26  Aidan Kehoe  <kehoea@parhasard.net>

	* cmds.c (Fself_insert_command):
	No 4th arg to event_to_character. 

	* console-impl.h (struct console_methods): Add a new member
	method, perhaps_init_unseen_key_defaults, which is to allow the
	console to take appropriate action--often a default binding to
	self-insert-command--when notified about a character it may not
	have seen before. 
	
	* console-gtk.c:
	Add gtk_perhaps_init_unseen_key_defaults, a new console method,
	and a hash table it uses. 

	* console-msw.c:
	Add mswindows_perhaps_init_unseen_key_defaults, a new console
	method, and a hash table it uses. 
	
	* console-tty.c:
	Add tty_perhaps_init_unseen_key_defaults, a new console method,
	and a hash table used by it. 

	* console-x.c:
	* console-x.c (x_perhaps_init_unseen_key_defaults): New. 