@@ -127,7 +127,6 @@ void emacs_Xt_event_handler (Widget wid, XtPointer closure, XEvent *event,
 
 static int last_quit_check_signal_tick_count;
 
-Lisp_Object Qkey_mapping;
 Lisp_Object Qsans_modifiers;
 
 #define THIS_IS_X
@@ -3084,7 +3083,6 @@ emacs_Xt_event_add_widget_actions (XtAppContext ctx)
 void
 syms_of_event_Xt (void)
 {
-  DEFSYMBOL (Qkey_mapping);
   DEFSYMBOL (Qsans_modifiers);
   DEFSYMBOL (Qself_insert_command);
 }
